--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 					  </div>
 					  <div class="col-12 text-center"><button type="submit" class="btn">Gửi</button></div>
 				</form><br><br>
-			<h2 class="text-center" style="color: #FFEBC9">Rất vui khi được hợp tác với bạn </h2>
+			<h2 class="text-center" style="color: #FFEBC9">Rất vui khi được hợp tác với bạn </h2><br>
+			<p class="text-center" style="color: #FFEBC9; font-family: 'Darker Grotesque', sans-serif; font-weight: 400; font-size: 16pt">Gmail: tt181009@gmail.com<br>
+                Instagram: thtuynz_</p>
 			<div class="row"><div class="col-12 d-flex justify-content-center mt-5"><img src="img/thank-you.png" height="80px" alt=""></div></div>
 		</div>
 	</div>
